fix nav overlay on smaller viewports, make logo a link to home

--- a/src/components/LangLinks/LangLinks.css
+++ b/src/components/LangLinks/LangLinks.css
@@ -46,8 +46,9 @@
 
 @media screen and (max-width: 750px) {
   .langlinks {
-    top: -7.6rem;
-    left: 7rem;
+    margin-top: 0;
+    top: -6.5rem;
+    left: 10rem;
     right: 7rem;
     z-index: 100;
   }
@@ -55,7 +56,7 @@
 
 @media screen and (max-width: 400px) {
   .langlinks {
-    top: -9.5rem;
+    top: -7.5rem;
     height: fit-content;
   }
 
